--- a/common/config/azure-pipelines/jobs/ci-core.yaml
+++ b/common/config/azure-pipelines/jobs/ci-core.yaml
@@ -30,11 +30,17 @@ jobs:
   steps:
     - checkout: self
       clean: true
+
     - task: NodeTool@0
       displayName: "Use Node ${{ parameters.nodeVersion }}"
       inputs:
         versionSpec: ${{ parameters.nodeVersion }}
         checkLatest: true
+
+    - task: UsePythonVersion@0
+      displayName: "Use Python3"
+      inputs:
+        versionSpec: '3.x'
 
     - script: |
         git config --local user.email imodeljs-admin@users.noreply.github.com
