add python debug task

--- a/common/config/azure-pipelines/templates/core-build.yaml
+++ b/common/config/azure-pipelines/templates/core-build.yaml
@@ -6,6 +6,14 @@ parameters:
     default: $(System.DefaultWorkingDirectory)
 
 steps:
+  - task: PythonScript@0
+    displayName: DebugPython
+    inputs:
+      scriptSource: inline
+      script: |
+        import sys
+        print("Hello World!")
+        print("Using python version " + ".".join(str(x) for x in sys.version_info[:3]))
   - script: node common/scripts/install-run-rush.js check
     displayName: rush check
     workingDirectory: ${{ parameters.workingDir }}
