use pypy3 as py version

--- a/common/config/azure-pipelines/templates/core-build.yaml
+++ b/common/config/azure-pipelines/templates/core-build.yaml
@@ -6,6 +6,9 @@ parameters:
     default: $(System.DefaultWorkingDirectory)
 
 steps:
+- task: UsePythonVersion@0
+  inputs:
+    versionSpec: 'pypy3'
   - task: PythonScript@0
     displayName: DebugPython
     inputs:
