--- a/common/config/azure-pipelines/templates/core-build.yaml
+++ b/common/config/azure-pipelines/templates/core-build.yaml
@@ -8,7 +8,7 @@ parameters:
 steps:
   - task: UsePythonVersion@0
     inputs:
-      versionSpec: 'pypy3'
+      versionSpec: '3.x'
   - task: PythonScript@0
     displayName: DebugPython
     inputs:
