--- a/common/config/azure-pipelines/templates/core-build.yaml
+++ b/common/config/azure-pipelines/templates/core-build.yaml
@@ -6,11 +6,11 @@ parameters:
     default: $(System.DefaultWorkingDirectory)
 
 steps:
-  - script: python --version
-    displayName: run python in script
+  # - script: python --version
+  #   displayName: run python in script
   - task: UsePythonVersion@0
     inputs:
-      versionSpec: '3.x'
+      versionSpec: 'pypy3'
   - task: PythonScript@0
     displayName: DebugPython
     inputs:
