--- a/ui/appui-layout-react/package.json
+++ b/ui/appui-layout-react/package.json
@@ -96,6 +96,7 @@
   "dependencies": {
     "@itwin/itwinui-css": "0.x",
     "@itwin/itwinui-react": "^1.32.0",
+    "@itwin/itwinui-icons-react": "^1.8.0",
     "classnames": "^2.3.1",
     "immer": "9.0.6",
     "uuid": "^7.0.3"
