--- a/ui/components-react/package.json
+++ b/ui/components-react/package.json
@@ -114,6 +114,7 @@
     "@bentley/icons-generic-webfont": "^1.0.15",
     "@itwin/itwinui-css": "0.x",
     "@itwin/itwinui-react": "^1.32.0",
+    "@itwin/itwinui-icons-react": "^1.8.0",
     "@types/shortid": "~0.0.29",
     "callable-instance2": "1.0.0",
     "classnames": "^2.3.1",
