--- a/ui/core-react/package.json
+++ b/ui/core-react/package.json
@@ -108,6 +108,7 @@
     "@bentley/icons-generic-webfont": "^1.0.15",
     "@itwin/itwinui-css": "0.x",
     "@itwin/itwinui-react": "^1.32.0",
+    "@itwin/itwinui-icons-react": "^1.8.0",
     "classnames": "^2.3.1",
     "dompurify": "^2.0.12",
     "lodash": "^4.17.10",
