--- a/ui/imodel-components-react/package.json
+++ b/ui/imodel-components-react/package.json
@@ -115,6 +115,7 @@
     "@bentley/icons-generic-webfont": "^1.0.15",
     "@itwin/itwinui-css": "0.x",
     "@itwin/itwinui-react": "^1.32.0",
+    "@itwin/itwinui-icons-react": "^1.8.0",
     "callable-instance2": "1.0.0",
     "classnames": "^2.3.1",
     "eventemitter2": "^5.0.1",
