--- a/package.json
+++ b/package.json
@@ -29,8 +29,17 @@
     "url": "http://www.bentley.com"
   },
   "//dependencies": "NOTE: dependencies will be empty here and instead specified in each package.",
-  "//devDependencies": "NOTE: devDependencies will be empty here and instead specified in each package.",
+  "devDependencies":{
+    "@esbuild-plugins/node-globals-polyfill": "~0.1.1",
+    "@esbuild-plugins/node-modules-polyfill": "~0.1.2",
+    "@kckst8/vite-plugin-commonjs": "^0.1.0",
+    "@vitejs/plugin-react":"^1.3.2"
+    },
   "dependencies": {
-    "vite": "^2.9.14"
+    "vite": "^2.9.14",
+    "@esbuild-plugins/node-globals-polyfill": "~0.1.1",
+    "@esbuild-plugins/node-modules-polyfill": "~0.1.2",
+    "@kckst8/vite-plugin-commonjs": "^0.1.0",
+    "@vitejs/plugin-react":"^1.3.2"
   }
 }
