--- a/tools/eslint-plugin/package.json
+++ b/tools/eslint-plugin/package.json
@@ -56,6 +56,9 @@
     "@esbuild-plugins/node-globals-polyfill": "~0.1.1",
     "@esbuild-plugins/node-modules-polyfill": "~0.1.2",
     "@kckst8/vite-plugin-commonjs": "^0.1.0",
-    "@vitejs/plugin-react":"^1.3.2"
+    "@vitejs/plugin-react":"^1.3.2",
+    "@babel/plugin-transform-react-jsx":"^7.14.9",
+    "@babel/plugin-syntax-flow":"^7.14.5",
+    "@babel/core":"^7.0"
   }
 }
