--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
 {
   "editor.tabSize": 2,
   "editor.insertSpaces": true,
-  "editor.formatOnSave": true,
+  // "editor.formatOnSave": true,
   "search.exclude": {
     "**/node_modules": true,
     "**/bower_components": true,
@@ -16,10 +16,10 @@
     "**/*.build.error.log": true,
     "**/generated-docs": true,
     "**/package-deps.json": true,
-    "**/node_modules": true,
-    "**/test-apps/**/build": true,
-    "**/out": true,
-    "**/lib": true,
+    // "**/node_modules": true,
+    // "**/test-apps/**/build": true,
+    // "**/out": true,
+    // "**/lib": true,
     "common/temp": true
   },
   "files.trimTrailingWhitespace": true,
@@ -49,25 +49,21 @@
   ],
   "json.schemas": [
     {
-      "fileMatch": [
-        "certa.json"
-      ],
+      "fileMatch": ["certa.json"],
       "url": "./tools/certa/certa.schema.json"
-    },
+    }
   ],
   "markdownlint.config": {
     "MD024": {
       "allow_different_nesting": true
-    },
+    }
   },
-  "markdownlint.ignore": [
-    "**/CHANGELOG.md"
-  ],
+  "markdownlint.ignore": ["**/CHANGELOG.md"],
   "eslint.validate": [
     "javascript",
     "javascriptreact",
     "typescript",
-    "typescriptreact",
+    "typescriptreact"
   ],
   "eslint.workingDirectories": [
     {
@@ -115,7 +111,5 @@
     "editor.action.fixAll": true, // Run the default formatter before eslint, it handles whitespace better
     "source.fixAll.eslint": true // then run ESLint auto-fix
   },
-  "cSpell.words": [
-    "Discoverability"
-  ],
+  "cSpell.words": ["Discoverability"]
 }
