use lage instead of rush

--- a/package.json
+++ b/package.json
@@ -2,20 +2,19 @@
   "name": "itwinjs-core",
   "//private": "NOTE: This 'root' package is private. It is never published",
   "private": true,
-  "description": "iTwin.js core components",
+  "description": "iTwin.js core monorepo",
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/iTwin/itwinjs-core"
   },
   "scripts": {
-    "build": "echo NOTE: use 'rush build' instead",
-    "clean": "echo NOTE: use 'rush clean' instead",
-    "docs": "echo NOTE: use 'rush docs' instead",
-    "lint": "echo NOTE: use 'rush lint' instead",
-    "test": "echo NOTE: use 'rush test' instead",
-    "test:integration": "echo NOTE: use 'rush test:integration' instead",
-    "preinstall": "echo ERROR: use 'rush install' instead && exit 1"
+    "preinstall": "npx only-allow pnpm",
+    "build": "lage build",
+    "build:clean": "lage build --no-cache",
+    "build:profile": "lage build --no-cache --profile",
+    "clean": "lage clean --no-cache && cospace purge && pnpm i -w cospace",
+    "setOverrides": "cospace override"
   },
   "keywords": [
     "Bentley",
@@ -29,5 +28,9 @@
     "url": "http://www.bentley.com"
   },
   "//dependencies": "NOTE: dependencies will be empty here and instead specified in each package.",
-  "//devDependencies": "NOTE: devDependencies will be empty here and instead specified in each package."
+  "devDependencies": {
+    "cospace": "latest",
+    "lage": "^1.7.8",
+    "turbo": "^1.4.0"
+  }
 }
