--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -800,14 +800,7 @@
       "request": "launch",
       "runtimeExecutable": "npm",
       "runtimeArgs": [ // NOTE: edit these to specify the command line arguments for the debugging session
-        "start",
-        "--",
-        "--hub=qa",
-        "--sourceContextId='ec002f93-f0c1-4ab3-a407-351848eba233'", // iModelJsIntegrationTest
-        "--sourceIModelId='73c9d3f0-3a47-41d6-8d2a-c0b0e4099f6a'", // ReadOnlyTest
-        "--targetFile='d:/tmp/test-target.bim'",
-        "--logTransformer",
-        "--logChangesets",
+        "start"
       ],
       "outFiles": [
         "${workspaceFolder}/test-apps/imodel-transformer/lib/**/*.js",
@@ -943,39 +936,39 @@
       ]
     },
     { /* PARTIAL */
-    "name": "[BACKEND] appui-test-app/standalone (chrome)",
-    "presentation": {
-      "hidden": true
+      "name": "[BACKEND] appui-test-app/standalone (chrome)",
+      "presentation": {
+        "hidden": true
+      },
+      "cwd": "${workspaceFolder}/test-apps/appui-test-app/standalone",
+      "type": "pwa-node",
+      "request": "launch",
+      "program": "${workspaceFolder}/test-apps/appui-test-app/standalone/lib/backend/main.js",
+      "outFiles": [
+        "${workspaceFolder}/test-apps/appui-test-app/standalone/lib/**/*.js",
+        "${workspaceFolder}/{core,clients,editor,presentation}/*/lib/**/*.js"
+      ],
+      "cascadeTerminateToConfigurations": [
+        "[FRONTEND] appui-test-app/standalone (chrome)"
+      ]
     },
-    "cwd": "${workspaceFolder}/test-apps/appui-test-app/standalone",
-    "type": "pwa-node",
-    "request": "launch",
-    "program": "${workspaceFolder}/test-apps/appui-test-app/standalone/lib/backend/main.js",
-    "outFiles": [
-      "${workspaceFolder}/test-apps/appui-test-app/standalone/lib/**/*.js",
-      "${workspaceFolder}/{core,clients,editor,presentation}/*/lib/**/*.js"
-    ],
-    "cascadeTerminateToConfigurations": [
-      "[FRONTEND] appui-test-app/standalone (chrome)"
-    ]
-  },
-  { /* PARTIAL */
-    "name": "[FRONTEND] appui-test-app/standalone (chrome)",
-    "presentation": {
-      "hidden": true
+    { /* PARTIAL */
+      "name": "[FRONTEND] appui-test-app/standalone (chrome)",
+      "presentation": {
+        "hidden": true
+      },
+      "type": "pwa-chrome",
+      "request": "launch",
+      "url": "http://localhost:3000/",
+      "outFiles": [
+        "${workspaceFolder}/test-apps/appui-test-app/standalone/lib/**/*.js",
+        "${workspaceFolder}/{core,clients,editor,ui,presentation}/*/lib/**/*.js"
+      ],
+      "cascadeTerminateToConfigurations": [
+        "[BACKEND] appui-test-app/standalone (chrome)"
+      ]
     },
-    "type": "pwa-chrome",
-    "request": "launch",
-    "url": "http://localhost:3000/",
-    "outFiles": [
-      "${workspaceFolder}/test-apps/appui-test-app/standalone/lib/**/*.js",
-      "${workspaceFolder}/{core,clients,editor,ui,presentation}/*/lib/**/*.js"
-    ],
-    "cascadeTerminateToConfigurations": [
-      "[BACKEND] appui-test-app/standalone (chrome)"
-    ]
-  },
-{ /* PARTIAL */
+    { /* PARTIAL */
       "name": "[BACKEND] appui-test-app/standalone (electron)",
       "presentation": {
         "hidden": true
@@ -1536,28 +1529,28 @@
       ]
     },
     {
-    "name": "appui-test-app/connected (chrome)",
-    "presentation": {
-      "group": "1_TestApps",
-      "order": 1
+      "name": "appui-test-app/connected (chrome)",
+      "presentation": {
+        "group": "1_TestApps",
+        "order": 1
+      },
+      "configurations": [
+        "[BACKEND] appui-test-app/connected (chrome)",
+        "[FRONTEND] appui-test-app/connected (chrome)"
+      ]
     },
-    "configurations": [
-      "[BACKEND] appui-test-app/connected (chrome)",
-      "[FRONTEND] appui-test-app/connected (chrome)"
-    ]
-  },
-  {
-    "name": "appui-test-app/standalone (chrome)",
-    "presentation": {
-      "group": "1_TestApps",
-      "order": 1
+    {
+      "name": "appui-test-app/standalone (chrome)",
+      "presentation": {
+        "group": "1_TestApps",
+        "order": 1
+      },
+      "configurations": [
+        "[BACKEND] appui-test-app/standalone (chrome)",
+        "[FRONTEND] appui-test-app/standalone (chrome)"
+      ]
     },
-    "configurations": [
-      "[BACKEND] appui-test-app/standalone (chrome)",
-      "[FRONTEND] appui-test-app/standalone (chrome)"
-    ]
-  },
-  {
+    {
       "name": "appui-test-app/standalone (electron)",
       "presentation": {
         "group": "1_TestApps",
@@ -1568,7 +1561,7 @@
         "[FRONTEND] appui-test-app/standalone (electron)"
       ]
     },
-  {
+    {
       "name": "ui-test-app (chrome)",
       "presentation": {
         "group": "1_TestApps",
